...
    tools:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    tools:background="@drawable/list_item_selected"
    tools:paddingVertical="4dp" >

    <com.cliffracertech.bootycrate.view.TintableCheckbox
        android:id="@+id/checkBox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toStartOf="@id/nameEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxExtraInfoBottomBarrier"
        tools:tint="@color/list_item_color_red"
        style="@style/ListItemColorEdit" />

...
        android:id="@+id/nameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/amountEdit"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/extraInfoEdit"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Item Name"
        tools:minHeight="@dimen/editable_text_field_min_height"
        style="@style/ListItemNameEdit" />

    <com.cliffracertech.bootycrate.view.AnimatedStrikeThroughTextFieldEdit
...
        android:layout_height="0dp"
        android:orientation="horizontal"
        tools:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/edit_button_description"
        style="@style/ListItemEditButton" />

    <!-- The link indicator is positioned in the top row of the view and has
         its translationY set so that it appears in the bottom row. This is
         done so that it doesn't interfere with the collapse animation.-->
    <ImageView
        android:id="@+id/linkIndicator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toStartOf="@id/editButton"
        app:layout_constraintTop_toTopOf="parent"
        android:translationY="24dp"
        android:alpha="0"
...
        android:id="@+id/amountEditLabel"
        android:layout_width="-3dp"
        android:layout_height="-3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/item_amount_description"
        android:labelFor="@id/valueEdit" />

</merge>
