...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp" >

    <FrameLayout
        android:id="@+id/newItemViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="6dp"
        tools:layout_height="110dp" />

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout="@layout/selected_item_group_picker" />

    <TextView
        android:id="@+id/warningMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:visibility="visible"
        tools:text="@string/new_item_no_name_error"
        tools:drawableStart="@drawable/ic_baseline_error_24"
...
